--- a/index.html
+++ b/index.html
@@ -10,24 +10,53 @@
 		<h1 class="titre">Cédric-Alexandre PASCAL</h1>
 		<nav>
 		<ul class="site-nav">
-			<li><a href="index.html">Accueil </a></li>
-			<li><a href="cendre_dinterets.html">Centre d'intérêts</a></li>
-			<li><a href="centre_dinterets.html">Projet Professionnel</a></li>
+			<li><a href="#presentation">Accueil </a></li>
+			<li><a href="#competence">Compétences</a></li>
+			<li><a href="#diplome">Diplômes</a></li>
+			<li><a href="#interets">Centre d'intérêts</a></li>
+			<li><a href="#projet">Projet Professionnel</a></li>
 		</ul>
 	</nav>
 		</header>
 		<div class="textgroup">
 		<div class="presentation">
-			<h2 class="titre2">Présentation</h2>
-			<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			<h2 class="titre2" id="presentation">Présentation</h2>
+			<p> Bonjour, je suis un jeune homme habitant sur Toulouse et passionné d'informatique depuis tout petit et passionné de compétition. J'ai développé ma première passion via mon père qui travaillait déjà dans ce domaine et donc m'y a initié dès le plus jeune âge. La deuxième est venue via le sport, particulièrement le Judo et aussi via le jeux-vidéo.</p>
+		</div>
+		<div class="presentation">
+			<h2 class="titre2" id="competence">Compétences</h2>
+				<ul>
+					<li>Langages de programmation (<i>Java, Python, SQL, HTML, CSS</i>) -  <i>Bonne maîtrise</i></li>
+					<li>Qualité d'écoute active - <i>Bonne</i></li>
+					<li>Outil Bureautiques - <i>Bonne maîtrise</i></li>
+					<li>Habilité à travailler en équipe - <i>Bonne</i></li>
+				</ul>
+		</div>
+		<div class="presentation">
+			<h2 class="titre2" id="diplome">Diplômes</h2>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</div>
+
+		<div class="presentation">
+			<h2 class="titre2" id="interets">Centre d'intérêts</h2>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
 		</div>
 		<div class="presentation">
-			<h2 class="titre2">Centre d'intérêts</h2>
+			<h2 class="titre2" id="projet">Projet Professionel</h2>
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -42,6 +71,7 @@
 		</div>
 		<footer>
 			<a href="mailto:cedricalexandrepascal@gmail.com" title="Cliquez ici pour me contacter">Mail: cedricalexandrepascal@gmail.com</a>
+			<p class="num">06 52 75 18 30</p>
 		</footer>
 </body>
 </html>
