--- a/index.html
+++ b/index.html
@@ -8,32 +8,57 @@
 <body>
 		<header>
 		<h1 class="titre">Cédric-Alexandre PASCAL</h1>
+		<div class="barre"></div>
+		<h2 class="titre2">Développeur</h2>
+
 		<nav>
 		<ul class="site-nav">
-			<li><a href="#presentation">Accueil </a></li>
-			<li><a href="#competence">Compétences</a></li>
-			<li><a href="#diplome">Diplômes</a></li>
-			<li><a href="#interets">Centre d'intérêts</a></li>
-			<li><a href="#projet">Projet Professionnel</a></li>
+			<li><a href="#Presentation">Présentation</a></li>
+			<li><a href="#Competence">Compétences</a></li>
+			<li><a href="#Diplome">Diplômes</a></li>
+			<li><a href="#Langue">Langues</a></li>
+			<li><a href="#Projet">Projet Professionnel</a></li>
+			<li><a href="#Interet">Centre d'intérêts</a></li>
 		</ul>
 	</nav>
 		</header>
 		<div class="textgroup">
-		<div class="presentation">
-			<h2 class="titre2" id="presentation">Présentation</h2>
-			<p> Bonjour, je suis un jeune homme habitant sur Toulouse et passionné d'informatique depuis tout petit et passionné de compétition. J'ai développé ma première passion via mon père qui travaillait déjà dans ce domaine et donc m'y a initié dès le plus jeune âge. La deuxième est venue via le sport, particulièrement le Judo et aussi via le jeux-vidéo.</p>
+		<div class="conteneur">
+			<h2 class="titre2" id="Presentation">Présentation</h2>
+			<p> Je suis un jeune homme <b>passionné d'informatique</b> depuis tout petit et <b>passionné</b> de compétition. J'ai développé ma première passion <b>via mon père</b> qui travaillait déjà dans ce domaine et donc m'y a initié dès le plus jeune âge. <br> La deuxième est venue <b>via le sport</b>, particulièrement le Judo et aussi via le jeux-vidéo. </p>
 		</div>
-		<div class="presentation">
-			<h2 class="titre2" id="competence">Compétences</h2>
-				<ul>
-					<li>Langages de programmation (<i>Java, Python, SQL, HTML, CSS</i>) -  <i>Bonne maîtrise</i></li>
-					<li>Qualité d'écoute active - <i>Bonne</i></li>
-					<li>Outil Bureautiques - <i>Bonne maîtrise</i></li>
-					<li>Habilité à travailler en équipe - <i>Bonne</i></li>
-				</ul>
+		<div class="conteneur2">
+			<h2 class="titre2" id='Competence'>Compétences</h2>
+			<ul>
+				<li><b>Langages de programmation (</b><i> Java, Python</i><b> )</b> - <i>Bonne Maîtrise</i> </li>
+				<li><b>HTML, CSS</b> - <i>Bonne Maîtrise</i></li>
+				<li><b>Langgage de base de données (</b><i> SQL</i> <b>)</b> - <i>Bonne Maîtrise</i></li>
+				<li><b>Outils Bureautiques</b> - <i>Bonne Maîtrise</i></li>
+				<li><b>Habililté à travailler en équipe</b> - <i>Bonne</i></li>
+				<li><b>Compétence en qualité d'écoute active</b> - <i>Bonne</i></li>
+			</ul>
 		</div>
-		<div class="presentation">
-			<h2 class="titre2" id="diplome">Diplômes</h2>
+
+		<div class="conteneur2">
+			<h2 class="titre2" id="Diplome">Diplômes</h2>
+			<ul>
+				<li><b>Baccalauréat Général</b> - <i>Mention Bien (Spécialité NSI, Math, LLCE Anglais)<br>- Lycée March Bloch</i></li>
+
+				<li><b>BUT Informatique</b> <br><i>- IUT de Blagnac</i></li>
+			</ul>
+			
+		</div>
+
+		<div class="conteneur2">
+			<h2 class="titre2" id="Langue">Langues</h2>
+			<ul>
+				<li><b>Anglais</b> - <i>Bonne Maîtrise (Certification Cambridge niveau B2)</i></li>
+				<li><b>Espagnol</b> - <i>Notions</i></li>
+			</ul>
+		</div>
+
+		<div class="conteneur2">
+			<h2 class="titre2" id="Projet">Projet Professionnel</h2>
 			<p>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -44,34 +69,18 @@
 			</p>
 		</div>
 
-		<div class="presentation">
-			<h2 class="titre2" id="interets">Centre d'intérêts</h2>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
-		</div>
-		<div class="presentation">
-			<h2 class="titre2" id="projet">Projet Professionel</h2>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
-		</div>
-			
+		<div class="conteneur2">
+			<h2 class="titre2" id="Interet">Centres d'intérêts</h2>
+			<ul>
+				<li><b>Judo</b> - <i>Ceinture Noire</i></li>
+				<li><b>Organiser des événements sur jeux en lignes</b></li>
+				<li><b>Participer a des compétions de jeux vidéo</b></li>
+			</ul>
 		</div>
 		</div>
 		<footer>
 			<a href="mailto:cedricalexandrepascal@gmail.com" title="Cliquez ici pour me contacter">Mail: cedricalexandrepascal@gmail.com</a>
-			<p class="num">06 52 75 18 30</p>
+			<p class="NumTel">Numéro de téléphone : 0652751830</p>
 		</footer>
 </body>
 </html>
